<resources>
    <string name="app_name">Alerto Barangay</string>
    <string name="help">We will help you find your way!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="username">Enter Username</string>
    <string name="passowrd">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="pass_word">Password</string>
    <string name="forgot_password_details">Provide your account email for which you want to reset your password!</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_details">Select which contact detail should we use to reset password?</string>
    <string name="new_credential">New Credential</string>
    <string name="new_crendential_details">Your identity has been verified Set your new password</string>
    <string name="password_update">Password Update</string>
    <string name="password_update_details">Your password has been updated</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="navigation_open_draw">open navigation drawer</string>
    <string name="navigation_close_draw">close navigation drawer</string>


    <!-- Strings for On Boarding Screen -->

    <!-- Title -->
    <string name="first_slide_title"></string>
    <string name="second_slide_title"></string>
    <string name="third_slide_title"></string>

    <!-- Descriptions-->
    <string name="first_slide_desc"></string>
    <string name="second_slide_desc"></string>
    <string name="third_slide_desc"></string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- String for Dashboard -->

    <!-- Titles and Description -->
    <string name="featured_location">Barangay Official</string>
    <string name="description">We will help you fight the crime!</string>
    <string name="most_view_incidint">Most Viewed</string>
    <string name="view_all">View All</string>


    <!-- OTP Description -->
    <string name="otp_verification">Verification</string>
    <string name="otp_description">Enter one time password sent on\n+6399</string>
    <string name="_63">+63-</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_code">Verify Code</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
</resources>